Do not notify proxy delegate of bad alternative proxy server if the alternative job failed due to network change

Bug: 774208
Change-Id: Ic7c81a251c3b88b9d3232b48452934e8d4e2a6c7
Reviewed-on: https://chromium-review.googlesource.com/716567
Reviewed-by: Zhongyi Shi <zhongyi@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508492}
Former-commit-id: 01018e8e756b69feb791341440879f6c07212887